@@ -1,3 +1,7 @@
+24/11/2011 Changes
+
+Finished Block access to variables outside of the block.
+
 23/11/2011 Changes
 
 Merges upstream changes, fixed conflicts and added meven plugin compiler version.
